fix: mengganti animasi yang membuat layout web menjadi overflow

--- a/app.css
+++ b/app.css
@@ -144,4 +144,7 @@ body {
         rotate: 0deg;
         transition: .5s ease;
     }
+    .wisata {
+        margin-top: 5rem;
+    }
 }
